--- a/assets/css/home/hero.css
+++ b/assets/css/home/hero.css
@@ -1,5 +1,6 @@
 .hero h1 {
     text-align: center;
+    margin-top: 1rem;
 }
 
 .hero p {
