--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,7 +37,17 @@ body {
 h1 {
   color: #851857;
   font-size: 2rem;
+  margin: 1rem;
 }
+
+main h1 {
+  color: #851857;
+  font-size: 2rem;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+  margin-left: 0;
+}
+
 p {
   color: #222222;
   font-size: 1rem;
